--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.hikari.maxLifetime=900000
 spring.datasource.hikari.connectionTimeout=30000
 
 ## Redis \u914D\u7F6E\u5F00\u59CB
-spring.redis.usePool=true
+spring.redis.usePool=false
 # \u6267\u884C\u547D\u4EE4\u8D85\u65F6\u65F6\u95F4
 spring.redis.commandTimeout=15000
 # \u662F\u5426\u5728\u4ECE\u6C60\u4E2D\u53D6\u51FA\u8FDE\u63A5\u524D\u8FDB\u884C\u68C0\u9A8C,\u5982\u679C\u68C0\u9A8C\u5931\u8D25,\u5219\u4ECE\u6C60\u4E2D\u53BB\u9664\u8FDE\u63A5\u5E76\u5C1D\u8BD5\u53D6\u51FA\u53E6\u4E00\u4E2A
