--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
 			<version>65.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>5.7.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
