--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 # \u4F7F\u7528md5\u8BA1\u7B97\u6E90\u6587\u4EF6\u548C\u76EE\u6807\u6587\u4EF6\u662F\u5426\u76F8\u540C\uFF0Ctrue-\u4F7F\u7528\uFF0Cfalse-\u4E0D\u4F7F\u7528
-useMd5=false
+useMD5=false
